[gd_scene load_steps=5 format=3 uid="uid://cj3qbb7deufpm"]

[ext_resource type="Script" uid="uid://dlj1o3gjokaje" path="res://Scripts/Entes/player_2.gd" id="1_45ong"]
[ext_resource type="Texture2D" uid="uid://dfd8h7jlajwpf" path="res://Sprites/Quadradofinal.png" id="2_63q1r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_63q1r"]
size = Vector2(18, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_45ong"]
size = Vector2(43, 38)

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_45ong")

[node name="Icon" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(4.47035e-07, 0)
scale = Vector2(0.9, 0.958333)
texture = ExtResource("2_63q1r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visibility_layer = 2
shape = SubResource("RectangleShape2D_63q1r")

[node name="Timer_conexao" type="Timer" parent="."]
wait_time = 4.0

[node name="AREA PARA MOVE" type="Area2D" parent="."]
metadata/_edit_lock_ = true

[node name="IDENTIFICA LIMITES" type="CollisionShape2D" parent="AREA PARA MOVE"]
position = Vector2(1.5, 2)
shape = SubResource("RectangleShape2D_45ong")
debug_color = Color(0.326914, 0.594941, 0.531051, 0.231373)
metadata/_edit_lock_ = true

[node name="Timer_Grude" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer_conexao" to="." method="_on_timer_conexao_timeout"]
[connection signal="body_entered" from="AREA PARA MOVE" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="AREA PARA MOVE" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer_Grude" to="." method="_on_timer_grude_timeout"]
